# readme-code-extractor-proc

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-BSD  LICENSE-MIT  README.md
src/: lib.rs
tests/: file_1.txt  load_file.rs
