[package]
name = "readme-code-extractor-proc"
version = "0.1.0"

edition = "2018"
rust-version = "1.81.0"

license = "BSD-2-Clause OR Apache-2.0 OR MIT"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Extract code blocks from your README.md (or another Markdown file)."

categories = ["development-tools", "rust-patterns"]

keywords = ["extract", "readme", "macro", "macros"]

repository = "https://github.com/prudent-rs/readme-code-extractor-proc"
homepage = "https://github.com/prudent-rs/readme-code-extractor"

[lib]
proc-macro = true

[lints.rust]
unexpected_cfgs = { level = "forbid"}
unknown_lints = { level = "forbid"}

[dependencies]
proc-macro-rules = "0.4.0"
proc-macro2 = {version="1.0.60", features=["span-locations"] }

# EXACT VERSION with = prefix
readme-code-extractor-lib = {version="= 0.1.0", path="../readme-code-extractor-lib"}

quote = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
syn = "2.0.15"
